--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Flexbox Exercise</title>
 </head>
 <body>
-    <div></div>
+    <div class="flexbox-container">
+        <div class="flexbox-item flexbox-item-1"></div>
+    </div>
 </body>
 </html>
